# duckpipe

./: .clang-format  .gitmodules  CMakeLists.txt  vcpkg.json
include/duckpipe/: app.h
src/: app.cpp  main.cpp
